# particles

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
example/: CMakeLists.txt  chate3.cpp  chate3.plt  langtons_ant.cpp  mps.cpp  random_walk.cpp  vicsek2  vicsek2.cpp  vicsek2.plt
include/particles/: ET.hpp  boundary.hpp  check.hpp  decl_overloads.h  expression.hpp  io.hpp  particle.hpp  particles.hpp  random.hpp  range.hpp  searcher.hpp  util.hpp  vec.hpp
include/particles/details/: delaunay_search.hpp  kdtree_search.hpp
include/particles/range/: common.hpp  enumerate.hpp  join.hpp  transform.hpp  xrange.hpp  zip.hpp
src/: boundary.hpp  expression.hpp  io.hpp  mathutil.hpp  mps.hpp  particle.hpp  particles.hpp  random.hpp  range.hpp  searcher.hpp  util.hpp  vec.hpp
test/: CMakeLists.txt  ET_test.cpp  boundary_test.cpp  check_test.cpp  expression_test.cpp  io_test.cpp  math_test.cpp  particle_test.cpp  random_test.cpp  range_test.cpp  searcher_test.cpp  util_test.cpp  vec_test.cpp
test/data/: 2d.xyz  3d.xyz
test/range/: enumerate_test.cpp  join_test.cpp  transform_test.cpp  xrange_test.cpp  zip_test.cpp
